# pyNutriScore

./: .gitignore  LICENSE  MANIFEST.in  README.md  setup.cfg
pyNutriScore/: __init__.py  nutri_score.py
pyNutriScore/interfaces/: foodTypes.py  nutrientTypes.py  scoreTableInterface.py
tests/: test_nutri_score.py
