[metadata]
name = pyNutriScore
version = 0.0.1
author = Jorit Studer
author_email = jorit.studer@gmail.com
description = Nutri-Score, an indicator of nutritional quality
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lemonhead94/pyNutriScore
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True